--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -26,3 +26,14 @@ body {
     letter-spacing: -1px;
   }
 }
+
+.test-button {
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px;
+  background-color: pink;
+  z-index: 1;
+  cursor: pointer;
+}
