--- a/app/styles/_styles.scss
+++ b/app/styles/_styles.scss
@@ -5,6 +5,7 @@ font-size: 100%;
 body {
   background: #FCD8BE;
   text-rendering: optimizeLegibility;
+  font-smooth:antialiased;
   color:#1A1108;
   margin:0;
 }
@@ -79,7 +80,7 @@ button {
   border-radius: 5px;
   border: none;
   padding: 10px 20px;
-  margin: 50px 0;
+  margin: 20px 0;
   color: white;
   cursor: pointer;
   font-size: 1rem;
