--- a/app/styles/_mediaqueries.scss
+++ b/app/styles/_mediaqueries.scss
@@ -1,3 +1,27 @@
+@media only screen
+and (max-width: 1120px){
+    html {
+      font-size: 11px;
+    }
+    button{
+      font-size: 1.4rem;
+    }
+
+  }
+
+  @media only screen
+  and (max-width: 1120px)
+  and (orientation : landscape){
+      html {
+        font-size: 11px;
+      }
+      button{
+        font-size: 1.4rem;
+      }
+
+    }
+
+
 @media only screen and (max-width: 800px) {
     html {
       font-size: 6px;
