--- a/app/styles/_styles.scss
+++ b/app/styles/_styles.scss
@@ -1,3 +1,7 @@
+::selection {
+  background: #ffb7b7;
+}
+
 html {
 font-size: 100%;
 }
@@ -13,13 +17,13 @@ body {
 .loading{
   height: 100vh;
   width: 100vw;
-  // background: #FCD8BE;
   position: absolute;
   z-index: 1000;
+  overflow: scroll;
 }
 
 .hidden{
-animation: reveal 1000ms cubic-bezier(0.7, 0, 0.84, 0) forwards;
+animation: reveal 1500ms cubic-bezier(0.7, 0, 0.84, 0) forwards;
 }
 
 @keyframes reveal {
@@ -40,7 +44,7 @@ h1{
   font-family: 'FogtwoNo5', serif;
   font-weight: 100;
   font-size: 4rem;
-  line-height: 1.2rem;
+  line-height: 1.4rem;
   font-weight: 100;
 }
 
