--- a/app/styles/_styles.scss
+++ b/app/styles/_styles.scss
@@ -23,7 +23,7 @@ body {
 }
 
 .hidden{
-animation: reveal 1500ms cubic-bezier(0.7, 0, 0.84, 0) forwards;
+animation: reveal 15ms cubic-bezier(0.7, 0, 0.84, 0) forwards;
 }
 
 @keyframes reveal {
@@ -62,7 +62,7 @@ p{
 }
 
 footer{
-  padding: 5rem;
+  padding: 5rem 0 0 5rem;
 }
 
 .a-dialog-text{
