--- a/app/styles/_styles.scss
+++ b/app/styles/_styles.scss
@@ -36,7 +36,7 @@ animation: reveal 1500ms cubic-bezier(0.7, 0, 0.84, 0) forwards;
   }
 }
 
-section{
+main{
   padding:2rem 0 0 5rem;
 }
 
@@ -62,7 +62,7 @@ p{
 }
 
 footer{
-  padding: 5rem 0 0 5rem;
+  padding: 5rem;
 }
 
 .a-dialog-text{
